# sqlalchemy-training

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml
migrations/versions/: 2023_09_02_1426-409d59f1bb5c_create_tables.py
sqla_training/: app.py  factories.py  main.py  models.py
sqla_training/migrations/: env.py
sqla_training/migrations/versions/: 2023_09_04_1320-2ffc189b54bf_first_revision.py  2023_09_04_1424_2aa3a3ca9b8b_first_revision.py  2023_09_04_1426_2af7c22914ce_add_phone_number.py  2023_09_04_1429_7dce744b891c_add_user_is_active_flag.py  2023_09_04_1559_9579ee2ea4e6_user_personal_info.py  2023_09_05_2232_404c48209e01_add_vehicle.py  max_migration.txt  max_revision.txt
